updated time format
